[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Futura Extra Black font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Buttons/Normal/start_button_normal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/Normal/quit_button_normal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/Normal/play_button_normal.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/select.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Tiles/new_blank.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Chara.png" type="Texture" id=8]
[ext_resource path="res://Assets/Tiles/other.png" type="Texture" id=9]
[ext_resource path="res://Assets/Tiles/moveable.png" type="Texture" id=10]
[ext_resource path="res://Assets/Tiles/ground.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fonts/futura light bt.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/Tiles/crown_nbg.png" type="Texture" id=13]
[ext_resource path="res://quad_128.png" type="Texture" id=14]
[ext_resource path="res://Assets/Fonts/futura_bold.tres" type="DynamicFont" id=15]
[ext_resource path="res://Assets/Buttons/Normal/next_button_normal.png" type="Texture" id=16]
[ext_resource path="res://Assets/Buttons/Pressed/next_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://Assets/Fonts/futura_normal.tres" type="DynamicFont" id=18]
[ext_resource path="res://Assets/Fonts/futur.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Assets/Buttons/Pressed/play_button_pressed.png" type="Texture" id=20]
[ext_resource path="res://Assets/Buttons/Pressed/start_button_pressed.png" type="Texture" id=21]
[ext_resource path="res://Assets/Buttons/Pressed/quit_button_pressed.png" type="Texture" id=22]
[ext_resource path="res://Assets/Other/ai_pathfind_player_target.png" type="Texture" id=23]
[ext_resource path="res://Assets/Other/ai_pathfind_closest_normal.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 12 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
modulate = Color( 1, 0.678431, 0.611765, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2

[node name="MainMenu" type="CanvasLayer" parent="."]
visible = false

[node name="Title" type="RichTextLabel" parent="MainMenu"]
margin_right = 1022.0
margin_bottom = 459.0
custom_fonts/normal_font = SubResource( 1 )
text = "Faulty Robot"
scroll_active = false

[node name="StartButton" type="TextureButton" parent="MainMenu"]
margin_left = 319.0
margin_top = 512.0
margin_right = 447.0
margin_bottom = 576.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 21 )

[node name="QuitButton" type="TextureButton" parent="MainMenu"]
margin_left = 574.0
margin_top = 512.0
margin_right = 702.0
margin_bottom = 576.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 22 )

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
margin_left = 740.0
margin_top = 147.0
margin_right = 996.0
margin_bottom = 403.0
texture = ExtResource( 8 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu"]
margin_left = 881.0
margin_top = 574.0
margin_right = 1025.0
margin_bottom = 599.0
custom_fonts/normal_font = SubResource( 4 )
text = "aloneInEntropy"
scroll_active = false

[node name="Instructions" type="CanvasLayer" parent="."]
visible = false

[node name="Instruct" type="RichTextLabel" parent="Instructions"]
margin_left = 36.0
margin_top = 39.0
margin_right = 825.0
margin_bottom = 549.0
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center][b]INSTRUCTIONS[/b]


Welcome to [color=#ddaaaa][b]Faulty Robot[/b][/color]! The goal of this game is to help this poor, delusional little robot reach its goal and save the princess!

Unfortunately, the robot was created by a computer science student and, as a result, has some pretty poor AI. Your goal is to aid the robot by becoming editing the level itself.

You must alter the dungeon the robot is in to allow it to pass through certain obstacles and reach its goals. There are multiple goals (\"princesses\" I swear) and the robot must reach them all.

However, your abilities aren't absolute. You have a limited number of tiles to place and destroy, and this amount only refils every so often and when goals are reached. Additionally, tiles you place and break will break and be replaced after a period of time, so you won't be able to sit back and relax while your devoted servant is busy doing all the work :(

The robot will be dropped into a random location within the dungeon. You have a set amount of time between reaching goals, and gain small amounts of time when goals are reached. Reach every goal before your time runs out! (You wouldn't want to break its heart...)
[/center]"
text = "INSTRUCTIONS


Welcome to Faulty Robot! The goal of this game is to help this poor, delusional little robot reach its goal and save the princess!

Unfortunately, the robot was created by a computer science student and, as a result, has some pretty poor AI. Your goal is to aid the robot by becoming editing the level itself.

You must alter the dungeon the robot is in to allow it to pass through certain obstacles and reach its goals. There are multiple goals (\"princesses\" I swear) and the robot must reach them all.

However, your abilities aren't absolute. You have a limited number of tiles to place and destroy, and this amount only refils every so often and when goals are reached. Additionally, tiles you place and break will break and be replaced after a period of time, so you won't be able to sit back and relax while your devoted servant is busy doing all the work :(

The robot will be dropped into a random location within the dungeon. You have a set amount of time between reaching goals, and gain small amounts of time when goals are reached. Reach every goal before your time runs out! (You wouldn't want to break its heart...)
"
fit_content_height = true
scroll_active = false

[node name="NextButton" type="TextureButton" parent="Instructions"]
margin_left = 879.0
margin_top = 522.0
margin_right = 1007.0
margin_bottom = 586.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )

[node name="RichTextLabel" type="RichTextLabel" parent="Instructions"]
margin_left = 860.0
margin_top = 380.0
margin_right = 1017.0
margin_bottom = 523.0
hint_tooltip = "HI THERE! ARE YOU A PRINCESS?"
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] The robot, Ai. A wannabe knight. She loves saving princesses in her dreams, or whatever qualify as dreams for a robot, anyway."
text = " The robot, Ai. A wannabe knight. She loves saving princesses in her dreams, or whatever qualify as dreams for a robot, anyway."
scroll_active = false

[node name="Divider" type="TextureRect" parent="Instructions"]
margin_left = 840.0
margin_top = 43.0
margin_right = 841.0
margin_bottom = 531.0
texture = ExtResource( 14 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Instructions"]
margin_left = 869.0
margin_top = 200.0
margin_right = 997.0
margin_bottom = 328.0
texture = ExtResource( 8 )
expand = true

[node name="Controls" type="CanvasLayer" parent="."]

[node name="Controls" type="RichTextLabel" parent="Controls"]
anchor_left = 0.035
anchor_top = 0.065
anchor_right = 0.806
anchor_bottom = 0.915
margin_left = 0.16
margin_right = -0.343994
margin_bottom = -242.0
custom_fonts/bold_font = ExtResource( 15 )
custom_fonts/normal_font = ExtResource( 18 )
bbcode_enabled = true
bbcode_text = "[center][b][u]CONTROLS[/u][/b]

You can [b]LEFT CLICK[/b] to place tiles and [b]RIGHT CLICK[/b] to destroy tiles, but NOT your own placed tiles. 

Use the [b]MIDDLE MOUSE BUTTON[/b] or [b]CTRL + LEFT CLICK[/b] to pan the camera around.

[b]DOUBLE LEFT CLICK[/b] a target to highlight and prioritise it.

Press [b]SPACE[/b] to move the camera back to the robot."
text = "CONTROLS

You can LEFT CLICK to place tiles and RIGHT CLICK to destroy tiles, but NOT your own placed tiles. 

Use the MIDDLE MOUSE BUTTON or CTRL + LEFT CLICK to pan the camera around.

DOUBLE LEFT CLICK a target to highlight and prioritise it.

Press SPACE to move the camera back to the robot."
fit_content_height = true
scroll_active = false

[node name="PlayButton" type="TextureButton" parent="Controls"]
margin_left = 879.0
margin_top = 522.0
margin_right = 1007.0
margin_bottom = 586.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 20 )

[node name="TextureRect" type="TextureRect" parent="Controls"]
margin_left = 895.0
margin_top = 70.0
margin_right = 959.0
margin_bottom = 134.0
texture = ExtResource( 10 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Controls"]
margin_left = 890.0
margin_top = 200.0
margin_right = 954.0
margin_bottom = 264.0
texture = ExtResource( 11 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Controls"]
margin_left = 890.0
margin_top = 280.0
margin_right = 954.0
margin_bottom = 344.0
texture = ExtResource( 9 )
expand = true

[node name="TextureRect4" type="TextureRect" parent="Controls"]
margin_left = 890.0
margin_top = 400.0
margin_right = 954.0
margin_bottom = 464.0
texture = ExtResource( 13 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="Controls"]
margin_left = 840.0
margin_top = 40.0
margin_right = 1009.0
margin_bottom = 471.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Left click to place!





Right click to destroy!









Double click to target!"
text = "Left click to place!





Right click to destroy!









Double click to target!"
scroll_active = false

[node name="Divider" type="TextureRect" parent="Controls"]
margin_left = 840.0
margin_top = 43.0
margin_right = 841.0
margin_bottom = 531.0
texture = ExtResource( 14 )
expand = true

[node name="PathfindDemo" type="TextureRect" parent="Controls"]
anchor_left = 0.028
anchor_top = 0.5
anchor_right = 0.441
anchor_bottom = 0.708
margin_left = 0.327999
margin_top = 20.0
margin_right = 0.415985
margin_bottom = 23.2
texture = ExtResource( 24 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="Controls/PathfindDemo"]
margin_left = 460.0
margin_top = 40.0
margin_right = 739.0
margin_bottom = 91.0
custom_fonts/normal_font = ExtResource( 18 )
bbcode_enabled = true
bbcode_text = "Ai will pathfind towards the nearest target."
text = "Ai will pathfind towards the nearest target."
scroll_active = false

[node name="PathfindDemo2" type="TextureRect" parent="Controls"]
anchor_left = 0.034
anchor_top = 0.745
anchor_right = 0.447
anchor_bottom = 0.958
margin_left = 0.183998
margin_top = 13.0
margin_right = 0.271973
margin_bottom = 13.2
texture = ExtResource( 23 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="Controls/PathfindDemo2"]
margin_left = 460.0
margin_top = 6.0
margin_right = 805.0
margin_bottom = 118.0
custom_fonts/normal_font = ExtResource( 18 )
bbcode_enabled = true
bbcode_text = "If the player has selected a target, Ai will pathfind towards it, ignoring all other targets. She cannot collect other targets, even if she passes through them."
text = "If the player has selected a target, Ai will pathfind towards it, ignoring all other targets. She cannot collect other targets, even if she passes through them."
scroll_active = false

[node name="BGAudio" type="AudioStreamPlayer2D" parent="." groups=["sound"]]
position = Vector2( 512, 300 )

[node name="ActionAudio" type="AudioStreamPlayer2D" parent="." groups=["sound"]]
position = Vector2( 512, 300 )
stream = ExtResource( 6 )

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Instructions/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Controls/PlayButton" to="." method="_on_PlayButton_pressed"]
